Fixes readability of header text

--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,16 @@
 .masthead {
-  background-image: url('https://unsplash.imgix.net/reserve/rVvIisyfQwOhZv35PPhh_unsplash.jpg');
+  background-image:     
+    linear-gradient(
+      rgba(0, 0, 0, 0.5),
+      rgba(0, 0, 0, 0.5)
+    ),
+       url('https://unsplash.imgix.net/reserve/rVvIisyfQwOhZv35PPhh_unsplash.jpg');
   background-size: cover;
   background-repeat: no-repeat;
   border-top: solid 1em #8B7B5B;
+  padding: 6em 0;
+  color: white;
+
 }
 
 .masthead-intro, .masthead-heading, .content-footer {
@@ -10,7 +18,6 @@
 }
 
 .masthead {
-  padding: 6em 0;
 }
 
 .masthead-intro {
